fix the double scrollbar, and small white space on intro

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -33,10 +33,10 @@
   src: url(/assets/fonts/SharpGrotesk-MediumItalic20.otf)
 }
 
-body { overflow-y: scroll!important; padding-right:0!important; }
-
 html {
   font-size: 100%;
+  margin:0;
+  padding:0;
 }
 
 body {
